--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -143,6 +143,10 @@ flutter:
     - assets/lottie_animations/
     - assets/rive_animations/
     - assets/pdfs/
+  fonts:
+    - family: MyFlutterApp
+      fonts:
+        - asset: assets/fonts/MyFlutterApp.ttf
 
   
   # An image asset can refer to one or more resolution-specific "variants", see
